<resources>
    <string name="app_name">DrinkingBuddiesJonah</string>
    <string name="title_matching">Matching</string>
    <string name="title_chat">Chat</string>
    <string name="title_destination">Destination</string>
    <string name="title_reviews">Reviews</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="image_bio">Bio</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_name">UserName</string>
    <string name="user_dis">User Discription</string>
    <string name="edit_cancel">Cancel</string>
    <string name="edit_save">Save</string>
    <string name="edit_return">Return</string>

    <!-- strings related to signup -->
    <string name="next">Next</string>
    <string name="action_sign_up">Sign up</string>
    <string name="re_enter_password">Reenter Password</string>

    <!-- strings related to signup -->
    <string name="person1">Person 1</string>
    <string name="time1">Time 1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="request">Requests</string>
    <string name="group_size">Group Size</string>
    <string name="type_of_drink">Type of Drink</string>
    <string name="range">Range</string>
    <string name="range_km">Range (in km)</string>
    <string name="visit">Thank You For Visiting</string>
</resources>
