<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_matching"
        android:icon="@drawable/baseline_group_add_black_48dp"
        android:title="@string/title_matching" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/baseline_chat_black_48dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_destination"
        android:icon="@drawable/baseline_place_black_48dp"
        android:title="@string/title_destination" />
    <item
        android:id="@+id/navigation_reviews"
        android:icon="@drawable/baseline_star_black_48dp"
        android:title="@string/title_reviews" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_black_48dp"
        android:title="@string/title_profile" />

</menu>
