<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg7"
    tools:context=".Tab4Profile">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="81dp"
        android:contentDescription="@string/image_bio"
        android:scaleType="center"
        android:src="@drawable/profile_bg"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/circularImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="108dp"
        android:src="@drawable/image"
        app:civ_border_color="#EEEEEE"
        app:civ_border_width="8dp"
        app:civ_shadow="false"
        app:civ_shadow_color="#8BC34A"
        app:civ_shadow_radius="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_profile_button"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/user_name"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/circularImageView"
        app:layout_constraintTop_toBottomOf="@+id/circularImageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/user_dis"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="260dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="330dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/face"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="11dp"
        android:src="@drawable/facebook_f"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <ImageView
        android:id="@+id/insta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/instagram"
        app:layout_constraintStart_toEndOf="@+id/face"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <ImageView
        android:id="@+id/twi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/twitter"
        app:layout_constraintStart_toEndOf="@+id/insta"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <ImageView
        android:id="@+id/we"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/wechat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/twi"
        app:layout_constraintTop_toBottomOf="@+id/view3" />



</android.support.constraint.ConstraintLayout>